--- a/geoindicators/pom.xml
+++ b/geoindicators/pom.xml
@@ -29,48 +29,24 @@
             <artifactId>groovy</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.orbisgis.orbisdata.datamanager</groupId>
-            <artifactId>jdbc</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-simple</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>org.orbisgis.data</groupId>
+            <artifactId>h2gis</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.orbisgis.orbisdata.datamanager</groupId>
-            <artifactId>api</artifactId>
+            <groupId>org.orbisgis.data</groupId>
+            <artifactId>postgis</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.orbisgis.orbisdata.processmanager</groupId>
+            <groupId>org.orbisgis</groupId>
             <artifactId>process</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-simple</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.orbisgis.orbisdata.datamanager</groupId>
+            <groupId>org.orbisgis.data</groupId>
             <artifactId>dataframe</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-simple</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.orbisgis</groupId>
             <artifactId>h2gis-network</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-simple</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.github.haifengl</groupId>
@@ -88,16 +64,12 @@
             <version>${smile-version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
@@ -140,10 +112,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
