--- a/geoindicators/pom.xml
+++ b/geoindicators/pom.xml
@@ -27,6 +27,7 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy</artifactId>
+            <version>${groovy-version}</version>
         </dependency>
         <dependency>
             <groupId>org.orbisgis.data</groupId>
@@ -74,6 +75,7 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-json</artifactId>
+            <version>${groovy-version}</version>
         </dependency>
 
         <!-- Test dependencies -->
