--- a/osm/pom.xml
+++ b/osm/pom.xml
@@ -29,10 +29,12 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy</artifactId>
+            <version>${groovy-version}</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-json</artifactId>
+            <version>${groovy-version}</version>
         </dependency>
         <dependency>
             <groupId>org.orbisgis.data</groupId>
