--- a/worldpoptools/pom.xml
+++ b/worldpoptools/pom.xml
@@ -21,6 +21,7 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy</artifactId>
+            <version>${groovy-version}</version>
         </dependency>
         <dependency>
             <groupId>org.orbisgis.data</groupId>
