Fix dependencies Issue #760

--- a/bdtopo_v2/pom.xml
+++ b/bdtopo_v2/pom.xml
@@ -27,6 +27,11 @@
             <version>${groovy-version}</version>
         </dependency>
         <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-sql</artifactId>
+            <version>${groovy-version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.orbisgis.data</groupId>
             <artifactId>h2gis</artifactId>
         </dependency>
