--- a/geoindicators/pom.xml
+++ b/geoindicators/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>groovy-json</artifactId>
             <version>${groovy-version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-sql</artifactId>
+            <version>${groovy-version}</version>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
