--- a/geoclimate/pom.xml
+++ b/geoclimate/pom.xml
@@ -44,17 +44,18 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>${h2-version}</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy</artifactId>
-            <version>${groovy-version}</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-json</artifactId>
-            <version>${groovy-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-sql</artifactId>
         </dependency>
         <dependency>
             <groupId>org.orbisgis.geoclimate</groupId>
@@ -77,6 +78,10 @@
             <artifactId>h2gis</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.orbisgis.data</groupId>
+            <artifactId>postgis</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.orbisgis</groupId>
             <artifactId>process</artifactId>
         </dependency>
@@ -90,20 +95,18 @@
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
         </dependency>
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
