--- a/bdtopo_v2/pom.xml
+++ b/bdtopo_v2/pom.xml
@@ -60,8 +60,8 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
         </dependency>
         <!-- Test dependencies -->
         <dependency>
