--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,9 @@
         <!-- Dependencies versions -->
         <junit-version>5.9.1</junit-version>
         <jts-version>1.19.0</jts-version>
-        <h2gis-version>2.2.0-SNAPSHOT</h2gis-version>
+        <h2gis-version>2.2.0</h2gis-version>
         <h2-version>2.1.214</h2-version>
-        <cts-version>1.6.0</cts-version>
+        <cts-version>1.7.0</cts-version>
         <orbisdata-version>2.0.0</orbisdata-version>
         <slf4j-version>1.7.36</slf4j-version>
         <groovy-version>3.0.11</groovy-version>
