--- a/worldpoptools/pom.xml
+++ b/worldpoptools/pom.xml
@@ -32,12 +32,12 @@
             <artifactId>data-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
+            <groupId>org.orbisgis.geoclimate</groupId>
+            <artifactId>common-utils</artifactId>
         </dependency>
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
 
         <!-- Test dependencies -->
