--- a/geoindicators/pom.xml
+++ b/geoindicators/pom.xml
@@ -38,10 +38,6 @@
             <artifactId>postgis</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.orbisgis</groupId>
-            <artifactId>process</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.orbisgis.data</groupId>
             <artifactId>dataframe</artifactId>
         </dependency>
@@ -81,6 +77,10 @@
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-sql</artifactId>
             <version>${groovy-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.orbisgis.geoclimate</groupId>
+            <artifactId>common-utils</artifactId>
         </dependency>
 
         <!-- Test dependencies -->
