Add a method to check if the worldpop coverageId is available

--- a/worldpoptools/pom.xml
+++ b/worldpoptools/pom.xml
@@ -24,6 +24,11 @@
             <version>${groovy-version}</version>
         </dependency>
         <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-xml</artifactId>
+            <version>${groovy-version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.orbisgis.data</groupId>
             <artifactId>h2gis</artifactId>
         </dependency>
