--- a/pom.xml
+++ b/pom.xml
@@ -31,11 +31,11 @@
         <junit-version>5.9.1</junit-version>
         <jts-version>1.19.0</jts-version>
         <h2gis-version>2.2.1-SNAPSHOT</h2gis-version>
-        <h2-version>2.1.214</h2-version>
-        <cts-version>1.7.0</cts-version>
+        <h2-version>2.2.224</h2-version>
+        <cts-version>1.7.1-SNAPSHOT</cts-version>
         <orbisdata-version>2.1.0-SNAPSHOT</orbisdata-version>
-        <slf4j-version>2.0.4</slf4j-version>
-        <logback-version>1.4.5</logback-version>
+        <slf4j-version>2.0.9</slf4j-version>
+        <logback-version>1.4.11</logback-version>
         <groovy-version>3.0.11</groovy-version>
         <picocli-version>4.6.3</picocli-version>
         <commons-io-version>2.11.0</commons-io-version>
