--- a/geoclimate/pom.xml
+++ b/geoclimate/pom.xml
@@ -85,14 +85,14 @@
             <groupId>org.orbisgis.geoclimate</groupId>
             <artifactId>osmtools</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.9</version>
         </dependency>
 
         <!-- Test dependencies -->
