Add new tag to take into account construction areas

--- a/osm/src/main/resources/org/orbisgis/geoclimate/osm/urbanAreasParams.json
+++ b/osm/src/main/resources/org/orbisgis/geoclimate/osm/urbanAreasParams.json
@@ -4,14 +4,22 @@
       "commercial",
       "residential",
       "retail",
-      "industrial"
-    ]
+      "industrial",
+      "construction"
+    ],
+    "construction":[]
   },
   "columns": [
     "landuse",
-    "industrial"
+    "industrial",
+    "construction"
   ],
   "type": {
+    "construction": {
+      "landuse": [
+        "construction"
+      ]
+    },
     "commercial": {
       "landuse": [
         "commercial",
