--- a/common-utils/pom.xml
+++ b/common-utils/pom.xml
@@ -30,6 +30,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
+            <version>${logback-version}</version>
         </dependency>
     </dependencies>
 
