--- a/geoclimate/pom.xml
+++ b/geoclimate/pom.xml
@@ -92,6 +92,7 @@
        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
+            <version>${logback-version}</version>
         </dependency>
 
         <!-- Test dependencies -->
