--- a/osm/src/main/resources/org/orbisgis/geoclimate/osm/urbanAreasParams.json
+++ b/osm/src/main/resources/org/orbisgis/geoclimate/osm/urbanAreasParams.json
@@ -1,20 +1,34 @@
 {
   "tags": {
-    "landuse": [
-      "commercial",
+    "landuse": [ "commercial",
       "residential",
       "retail",
       "industrial",
-      "construction"
-    ],
-    "construction":[]
+      "construction", "military",
+      "railway", "farmyard"],
+    "construction":[],
+    "amenity": ["school",
+      "university",
+      "research_institute", "community_centre"]
   },
   "columns": [
     "landuse",
     "industrial",
-    "construction"
+    "construction",
+    "amenity",
+    "building"
   ],
   "type": {
+    "education": {
+      "landuse": [
+        "education"
+      ],
+      "amenity": [
+        "school",
+        "university",
+        "research_institute"
+      ]
+    },
     "construction": {
       "landuse": [
         "construction"
@@ -31,14 +45,38 @@
         "residential"
       ]
     },
-    "heavy_industry:industrial": {
+    "heavy_industry": {
       "industrial": [
         "refinery"
       ]
     },
-    "light_industry:industrial": {
+    "light_industry": {
       "landuse": [
-        "industrial"
+        "industrial", "port"
+      ]
+    },
+    "government": {
+      "landuse": [
+        "institutional"
+      ]
+    },
+    "social_building": {
+    "amenity": [
+      "community_centre"
+    ]},
+    "military": {
+      "landuse": [
+        "military"
+      ]
+    },
+    "transport": {
+      "landuse": [
+        "railway"
+      ]
+    },
+    "agricultural": {
+      "landuse": [
+        "farmyard"
       ]
     }
   }
