--- a/common-utils/pom.xml
+++ b/common-utils/pom.xml
@@ -19,9 +19,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.codehaus.groovy</groupId>
+            <groupId>org.apache.groovy</groupId>
             <artifactId>groovy</artifactId>
-            <version>${groovy-version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
