Fix spelling error

--- a/pom.xml
+++ b/pom.xml
@@ -214,7 +214,7 @@
                 <version>${slf4j-version}</version>
             </dependency>
             <dependency>
-                <groupId>org.apche.groovy</groupId>
+                <groupId>org.apache.groovy</groupId>
                 <artifactId>groovy</artifactId>
                 <version>${groovy-version}</version>
             </dependency>
