--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <module>geoindicators</module>
         <module>bdtopo</module>
         <module>osm</module>
-        <module>geoclimate</module>
+        <module>geoclimate-cli</module>
         <module>osmtools</module>
         <module>worldpoptools</module>
         <module>common-utils</module>
