Fix  snapshot action

--- a/.github/workflows/CI_snapshot.yml
+++ b/.github/workflows/CI_snapshot.yml
@@ -59,7 +59,7 @@ jobs:
 
       # Build jar with dependencies
       - name: Build jar with dependencies
-        run: mvn package -pl geoclimate
+        run: mvn package -pl geoclimate-cli
 
       # Export the last git tag into env.
       - name: Export env values
