--- a/bdtopo/pom.xml
+++ b/bdtopo/pom.xml
@@ -9,6 +9,11 @@
     <modelVersion>4.0.0</modelVersion>
     <version>1.0.0-SNAPSHOT</version>
 
+    <!-- Project Information -->
+    <name>bdtopo</name>
+    <description>GeoClimate module to format the BDTopo data into the GeoClimate abstract model.
+    </description>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
