--- a/common-utils/pom.xml
+++ b/common-utils/pom.xml
@@ -10,6 +10,11 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
+    <!-- Project Information -->
+    <name>common-utils</name>
+    <description>GeoClimate common utilities.
+    </description>
+
     <artifactId>common-utils</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
