--- a/geoclimate-cli/pom.xml
+++ b/geoclimate-cli/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>geoclimate</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
+    <!-- Project Information -->
+    <name>geoclimate-cli</name>
+    <description>GeoClimate module to run geoclimate workflow with a command line interface.
+    </description>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
