--- a/worldpoptools/pom.xml
+++ b/worldpoptools/pom.xml
@@ -13,6 +13,11 @@
     <groupId>org.orbisgis.geoclimate</groupId>
     <version>1.0.0-SNAPSHOT</version>
 
+    <!-- Project Information -->
+    <name>worldpoptools</name>
+    <description>GeoClimate module to download population data from the WorldPop OGC services.
+    </description>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
