--- a/bdtopo/pom.xml
+++ b/bdtopo/pom.xml
@@ -2,10 +2,10 @@
     <parent>
         <groupId>org.orbisgis.geoclimate</groupId>
         <artifactId>geoclimate-parent</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
 
     <!-- Project Information -->
     <name>bdtopo</name>
