--- a/common-utils/pom.xml
+++ b/common-utils/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.orbisgis.geoclimate</groupId>
         <artifactId>geoclimate-parent</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
 
     <!-- Project Information -->
@@ -14,7 +14,7 @@
     </description>
 
     <artifactId>common-utils</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
