--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>org.orbisgis.geoclimate</groupId>
     <artifactId>geoclimate-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <modules>
         <module>geoindicators</module>
         <module>bdtopo</module>
@@ -109,7 +109,7 @@
         <connection>scm:git:https://github.com/orbisgis/geoclimate.git</connection>
         <developerConnection>scm:git:https://github.com/orbisgis/geoclimate.git</developerConnection>
         <url>git@github.com:orbisgis/geoclimate.git</url>
-        <tag>HEAD</tag>
+        <tag>v1.0.1</tag>
     </scm>
 
     <issueManagement>
